--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-background-color: rgb(233, 227, 227);
+background-color:hsl(0, 0%, 96%);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
