--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,14 @@
   margin: 0 auto;
   text-align: center;
 }
- div{
+
+div {
   border-radius: 5px;
 }
-.container div{
+
+.container div {
   box-shadow: 0 4px 8px 0 rgba(70, 69, 69, 0.1), 0 6px 20px 0 rgba(70, 69, 69, 0.1);
+  cursor: pointer;
+
 
 }
